@@ -36,6 +36,7 @@ Version 1.9.0-svn:
    * Add ~DARKEN() counterpart to ~BRIGHTEN()
    * Implement min_value for [illuminates]
    * Added lua functions wesnoth.get_side_count() and wesnoth.is_enemy(a,b)
+   * Add 'recall_cost' key for [side], to override [game_config]'s default
  * Miscellaneous and bug fixes:
    * Defaulted log level to warning again
    * New option to auto-set delay shroud update on game start
